--- a/src/dk/easv/ImageViewerWindow.fxml
+++ b/src/dk/easv/ImageViewerWindow.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="803.0" prefWidth="1091.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.ImageViewerWindowController">
     <top>
@@ -30,7 +31,7 @@
                   <Button id="btnNext" fx:id="stopBtn" mnemonicParsing="false" onAction="#stopBtn" prefHeight="26.0" prefWidth="162.0" text="Stop SlideShow" />
                     </buttons>
                 </ButtonBar>
-            <Slider fx:id="slideshowSlider" blockIncrement="0.1" majorTickUnit="1.0" max="5.0" min="1.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" value="1.0">
+            <Slider fx:id="slideshowSlider" blockIncrement="0.1" majorTickUnit="1.0" max="5.0" min="1.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" value="2.0">
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
@@ -40,6 +41,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
+            <Text fx:id="fileText" strokeType="OUTSIDE" strokeWidth="0.0" text="File Path" wrappingWidth="362.91796875" />
             </children>
             <opaqueInsets>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
